--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,30 @@
+[workspace]
+members = [".", "examples"]
+
 [package]
 name = "rust_ui"
 version = "0.1.0"
 edition = "2021"
+authors = ["Shahrear Hossain <shahrear@algoscienceacademy.com>"]
+description = "A modern, cross-platform UI framework for building native applications"
+documentation = "https://docs.rs/rust_ui"
+repository = "https://github.com/algoscienceacademy/RustUI"
+license = "MIT"
+readme = "README.md"
+keywords = ["ui", "gui", "cross-platform", "framework", "native"]
+categories = ["gui", "api-bindings", "graphics", "rendering", "wasm"]
 
-[[example]]
-name = "basic_app"
-path = "examples/basic_app.rs"
+exclude = ["docs/private/*", "scripts/*"]
+include = [
+    "src/**/*",
+    "examples/**/*",
+    "README.md",
+    "LICENSE",
+    "CHANGELOG.md"
+]
+
+[badges]
+maintenance = { status = "actively-developed" }
 
 [dependencies]
 winit = "0.28"
@@ -22,3 +41,15 @@ metal = "0.24"
 
 [target.'cfg(target_os = "android")'.dependencies]
 ndk-glue = "0.7"
+
+[package.metadata.docs.rs]
+all-features = true
+default-target = "x86_64-unknown-linux-gnu"
+targets = ["wasm32-unknown-unknown", "x86_64-apple-darwin"]
+
+[package.metadata.algoscienceacademy]
+project-type = "framework"
+organization = "Algo Science Academy"
+team = "UI Framework Team"
+lead-developer = "Shahrear Hossain"
+contact = "sshahrearhossain@gmail.com"
