--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = [".", "examples"]
 
 [package]
 name = "rust_native"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2021"
 authors = ["Shahrear Hossain <shahrear@algoscienceacademy.com>"]
 description = "A modern, cross-platform UI framework for building native applications"
@@ -37,7 +37,7 @@ serde_json = "1.0"
 
 [target.'cfg(target_os = "ios")'.dependencies]
 objc = "0.2"
-metal = "0.24"
+metal = { version = "0.24", features = ["default"] }
 
 [target.'cfg(target_os = "android")'.dependencies]
 ndk-glue = "0.7"
