--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = [".", "examples"]
 
 [package]
 name = "rust_native"
-version = "0.1.4"
+version = "1.1.0"
 edition = "2021"
 authors = ["Shahrear Hossain <shahrear@algoscienceacademy.com>"]
 description = "A modern, cross-platform UI framework for building native applications"
@@ -34,6 +34,8 @@ futures = "0.3"
 tokio = { version = "1.28", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+notify = "5.0"
+crossterm = "0.23"
 
 [target.'cfg(target_os = "ios")'.dependencies]
 objc = "0.2"
