--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,8 @@
 members = [".", "examples"]
 
 [package]
-name = "rust_native"
-version = "1.1.0"
+name = "rust-native"
+version = "1.2.0"
 edition = "2021"
 authors = ["Shahrear Hossain <shahrear@algoscienceacademy.com>"]
 description = "A modern, cross-platform UI framework for building native applications"
@@ -23,9 +23,6 @@ include = [
     "CHANGELOG.md"
 ]
 
-[badges]
-maintenance = { status = "actively-developed" }
-
 [dependencies]
 winit = "0.28"
 wgpu = "0.16"
@@ -35,7 +32,9 @@ tokio = { version = "1.28", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 notify = "5.0"
-crossterm = "0.23"
+crossterm = "0.25"
+clap = { version = "4.0", features = ["derive"] }
+toml = "0.7"
 
 [target.'cfg(target_os = "ios")'.dependencies]
 objc = "0.2"
@@ -55,3 +54,7 @@ organization = "Algo Science Academy"
 team = "UI Framework Team"
 lead-developer = "Shahrear Hossain"
 contact = "sshahrearhossain@gmail.com"
+
+[[bin]]
+name = "rust-native"
+path = "src/bin/rust-native.rs"
