--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = [".", "examples"]
 
 [package]
 name = "rust_native"
-version = "1.3.0"
+version = "1.4.0"
 edition = "2021"
 authors = ["Shahrear Hossain <shahrear@algoscienceacademy.com>"]
 description = "A modern, cross-platform UI framework for building native applications"
@@ -13,6 +13,7 @@ license = "MIT"
 readme = "README.md"
 keywords = ["ui", "gui", "cross-platform", "framework", "native"]
 categories = ["gui", "api-bindings", "graphics", "rendering", "wasm"]
+default-run = "rust-native"
 
 exclude = ["docs/private/*", "scripts/*"]
 include = [
